@@ -10,6 +10,10 @@
 
         * src/openvrml/OpenVRML/browser.cpp: More doc-comment additions.
 
+        * src/openvrml/OpenVRML/browser.cpp: Fixed
+          ProtoNode::getFieldImpl to return the default value for the
+          field if it hasn't been IS'd to anything.
+
 2002-08-27  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/browser.cpp,
